--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,40 @@
   padding: 0;
 }
 
-// TODO
+:root {
+  --highlight: #FF57B2;
+  --heading: #f8f8f8;
+  --background: #1a1d23;
+  --info: #bbbbbb;
+  --body: #d7d7d7;
+}
+
+body {
+  background: var(--background);
+  color: var(--body);
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body, input, textarea, button, select {
+  font: 400 1rem "Inter", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
